--- a/style.css
+++ b/style.css
@@ -236,7 +236,6 @@ main{
 .coluna{
   display:flex;
   flex-direction:column-reverse;
-  
 }
 
 .menu-lateral{
@@ -363,12 +362,6 @@ a:hover{
   cursor: pointer;
 }
 
-@media only screen and (max-width: 400px) {
-  .menu-lateral{
-   display:none;   
-}
-}
-
 footer{
   color:var(--branco);
   background-color:var(--preto);
@@ -390,4 +383,37 @@ footer > ul{
 footer>p{
   text-align:center;
   padding:10px;
+}
+@media only screen and (max-width: 400px) {
+  .menu-lateral{
+    margin: auto;
+    display:flex;   
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+ }
+ .menu-lateral>figure>img{
+  width: 100px;
+  padding: 50px;
+ }
+ .menu-lateral>figure>img:hover{
+  filter: grayscale(1);
+ }
+  .capas{
+    height: 200px;
+    flex-wrap: nowrap;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    position: relative;
+    overflow: hidden;
+  }
+  .trabalhos{
+    justify-items: center;
+    max-width: 450px;
+    overflow: hidden;
+    
+  }
+  
 }
